--- a/_config.yml
+++ b/_config.yml
@@ -82,7 +82,7 @@ analytics:
 author:
   name             : "Seng Pei Liew"
   avatar           : "prof2.jpg"
-  bio              : "Research Scientist<br>Machine Learning<br>Physics<br>sengpei.liew at protonmail . com"
+  bio              : "Research Scientist<br>Machine Learning<br>Physics"
   location         : "Tokyo, Japan"
   employer         :
   pubmed           : 
