--- a/_config.yml
+++ b/_config.yml
@@ -109,7 +109,7 @@ author:
   stackoverflow    : # http://stackoverflow.com/users//username
   steam            :
   tumblr           :
-  twitter          : "https://x.com/sp_amva4np"
+  twitter          : "sp_amva4np"
   vine             :
   weibo            :
   xing             :
