Add Google Scholar link to configuration

--- a/_config.yml
+++ b/_config.yml
@@ -86,7 +86,7 @@ author:
   location         : "Tokyo, Japan"
   employer         :
   pubmed           : 
-  googlescholar    : # "https://scholar.google.com/citations?user=KQL8tB8AAAAJ&hl=en"
+  googlescholar    : "https://scholar.google.com/citations?user=KQL8tB8AAAAJ&hl=en"
   email            : 
   researchgate     : # "https://www.researchgate.net/profile/"
   uri              :
